subida ultimos detalles

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Romero Leandro">
     <meta name="copyright" content="Romero Leandro">
-    <meta name="description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.">
+    <meta name="description" content="Este es mi portfolio, que con el tiempo he ido creando. Llevando a cabo diversas tareas, como desarrollador y programador web.">
     <!-- icono pestaña -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
@@ -64,14 +64,14 @@
                 <!-- PROYECTO 2 -->
                 <div class="BoxFilaPortfolio">
                     <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
-                        <img src="../assets/img/proyecto-2.jpg" alt="Proyecto1">
+                        <img src="../assets/img/proyecto-2.jpg" alt="Proyecto2">
                         <p>PROYECTO DOS</p>
                     </a>
                 </div>
                 <!-- PROYECTO 3 -->
                 <div class="BoxFilaPortfolio">
                     <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
-                        <img src="../assets/img/proyecto-3.jpeg" alt="Proyecto1">
+                        <img src="../assets/img/proyecto-3.jpeg" alt="Proyecto3">
                         <p>PROYECTO TRES</p>
                     </a>
                 </div>
@@ -80,21 +80,21 @@
                 <!-- PROYECTO 4 -->
                 <div class="BoxFilaPortfolio">
                     <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
-                        <img src="../assets/img/proyecto-4.jpeg" alt="Proyecto1">
+                        <img src="../assets/img/proyecto-4.jpeg" alt="Proyecto4">
                         <p>PROYECTO CUATRO</p>
                     </a>
                 </div>
                 <!-- PROYECTO 5 -->
                 <div class="BoxFilaPortfolio">
                     <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
-                        <img src="../assets/img/proyecto-5.jpeg" alt="Proyecto1">
+                        <img src="../assets/img/proyecto-5.jpeg" alt="Proyecto5">
                         <p>PROYECTO CINCO</p>
                     </a>
                 </div>
                 <!-- PROYECTO 6 -->
                 <div class="BoxFilaPortfolio">
                     <a href="https://github.com/RomeroLeandro/ProyectoPortfolio" target="_blank">
-                        <img src="../assets/img/proyecto-6.jpeg" alt="Proyecto1">
+                        <img src="../assets/img/proyecto-6.jpeg" alt="Proyecto6">
                         <p>PROYECTO SEIS</p>
                     </a>
                 </div>
