--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Romero Leandro">
     <meta name="copyright" content="Romero Leandro">
-    <meta name="description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.">
+    <meta name="description" content="Si buscas un programador web o desarrollador web especiallizado en posicionamiento en buscadores (SEO) cuenta conmigo.">
     <!-- icono pestaña -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
@@ -59,9 +59,8 @@
                 Me mantengo en constante aprendisaje,apasionado con el trabajo que realizo,ofreciendo y aportando mis conocimientos,habilidades y experiencia,así como nuevas ideas,soluciones,personalización y seguimiento de calidad.</p>
             </div>
             <!-- boton descargar cv -->
-            <!-- !  AGREGAR CURRICULUM VITAE -->
             <div class="DescargaCv">
-                <a href="#">DESCARGAR CV</a>
+                <a href="../assets/pdf/Curriculum-vitae.pdf" target="_blank">DESCARGAR CV</a>
             </div>
         </section>
     </main>
