--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Romero Leandro">
     <meta name="copyright" content="Romero Leandro">
-    <meta name="description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.">
+    <meta name="description" content="TRABAJEMOS JUNTOS, rellena este pequeño formulario y me pondré en contacto contigo con la mayor brevedad posible.">
     <!-- icono pestaña -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
