--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,12 +8,12 @@
     <meta name="copyright" content="Romero Leandro">
     <meta name="description" content="TRABAJEMOS JUNTOS, rellena este pequeño formulario y me pondré en contacto contigo con la mayor brevedad posible.">
     <!-- open graph -->
-    <meta property="og:title" content="Portfolio Leandro Romero">
-    <meta property="og:site_name" content="Inicio - Leandro Romero - Diseñador y programador WEB">
-    <meta property="og:url" content="https://leandrocromero.000webhostapp.com/index.html">
-    <meta property="og:description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://drive.google.com/file/d/1AFlwxLBmiPu25QlQRaR9PS4RNkM57Owa/view">
+<meta property="og:title" content="Portfolio Leandro Romero">
+<meta property="og:site_name" content="Inicio - Leandro Romero - Diseñador y programador WEB">
+<meta property="og:url" content="https://leandrocromero.000webhostapp.com/">
+<meta property="og:description" content="Desarrollador de páginas web Front-End. Diseñador de páginas web. Programador web.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://drive.google.com/file/d/1AFlwxLBmiPu25QlQRaR9PS4RNkM57Owa/view">
     <!-- icono pestaña -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
